bikeItems added to bikeList/added router/

--- a/WAD_00011347_Angular/src/app/bikes/bike-list/bike-item/bike-item.component.html
+++ b/WAD_00011347_Angular/src/app/bikes/bike-list/bike-item/bike-item.component.html
@@ -1,1 +1,20 @@
-<p>bike-item works!</p>
+<a
+  style="cursor: pointer"
+  [routerLink]="['detail']"
+  routerLinkActive="active"
+  class="list-group-item clearfix"
+>
+  <div class="pull-left">
+    <h4 class="list-group-item-heading">{{ bike.name }}</h4>
+    <p class="list-group-item-text">{{ bike.description }}</p>
+  </div>
+  <span class="pull-right">
+    <img
+      [src]="bike.imagePath"
+      alt="{{ bike.name }}"
+      class="img-responsive"
+      style="max-height: 50px"
+    />
+  </span>
+</a>
+<h1>Hey</h1>
