finilized project with all CRUD

--- a/WAD_00011347_Angular/src/app/bike-category/bike-category.component.html
+++ b/WAD_00011347_Angular/src/app/bike-category/bike-category.component.html
@@ -1,1 +1,8 @@
-<p>bike-category works!</p>
+<div class="row">
+  <div class="col-md-5">
+    <app-bike-category-list></app-bike-category-list>
+  </div>
+  <div class="col-md-7">
+    <router-outlet></router-outlet>
+  </div>
+</div>
