--- a/WAD_00011347_Angular/src/app/bikes/bike-list/bike-item/bike-item.component.html
+++ b/WAD_00011347_Angular/src/app/bikes/bike-list/bike-item/bike-item.component.html
@@ -1,6 +1,6 @@
 <a
   style="cursor: pointer"
-  [routerLink]="['detail']"
+  [routerLink]="['bike/detail/' + bike.id]"
   routerLinkActive="active"
   class="list-group-item clearfix"
 >
@@ -17,4 +17,3 @@
     />
   </span>
 </a>
-<h1>Hey</h1>
