--- a/WAD_00011347_Angular/src/app/bikes/bike-edit/bike-edit.component.html
+++ b/WAD_00011347_Angular/src/app/bikes/bike-edit/bike-edit.component.html
@@ -76,12 +76,12 @@
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <div class="form-group">
-            <label for="categories">Category</label>
+          <div class="form-group" formGroupName="category">
+            <label for="category">Category</label>
             <input
               type="text"
               id="categories"
-              formControlName="categories"
+              formControlName="id"
               class="form-control"
             />
           </div>
