--- a/WAD_00011347_Angular/src/app/header/header.component.html
+++ b/WAD_00011347_Angular/src/app/header/header.component.html
@@ -6,8 +6,8 @@
     </div>
     <div class="nav-elements">
       <ul>
-        <li><a href="#">Bikes</a></li>
-        <li><a href="#">Bike Categories</a></li>
+        <li><a routerLink="/">Bikes</a></li>
+        <li><a routerLink="/categories">Bike Categories</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#"></a></li>
       </ul>
